--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "doctrine/dbal": "^2.9",
+        "erusev/parsedown-extra": "~0.7.1",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "laravel/framework": "^6.1",
