--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
             "database/seeds",
             "database/factories"
         ],
-        "files":["app/helper.php"]
+        "files":["app/helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
