--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "erusev/parsedown-extra": "~0.7.1",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~5.3|~6.0",
+        "intervention/image": "2.3.*",
         "laravel/framework": "^6.1",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0"
