--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "intervention/image": "2.3.*",
-        "laravel/framework": "^6.1",
+        "laracasts/flash": "^3.0",
+        "laravel/framework": "^6.3",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0"
+        "laravel/ui": "^1.0",
+        "spatie/laravel-medialibrary": "^7.14"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
